--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@ featured-image_path: /images/wt_blackcompass.png
 
 <!-- This is an example of a loop that shows the 3 most recent posts in the travel category -->
 <section>
-  <h2 class="centered"> Travel Category Posts </h2>
+  <h2 class="centered"> Marketing Posts </h2>
 
   <div class="grid blog-loop">
     {% for post in site.categories.travel  limit:3 %}
