Updated "My First Post" to "Our Favorite Rentals"

--- a/_posts/2017-01-10-Our-Favorite-Rentals.html
+++ b/_posts/2017-01-10-Our-Favorite-Rentals.html
@@ -3,18 +3,20 @@ layout: post
 title: Our Favorite Rentals
 meta-description:
 meta-keywords:
-image_path: img src="/images/suitcase.jpg"
+image_path: img src="/images/oheka.jpg"
 categories: [travel, wine]
 author: Samantha Ruiz
 ---
 
 <section>
 <h1>Our Favorite Rentals</h1>
+<p>It’s all about the accommodation. Now, more than ever, we rely on visuals before we make travel plans, meaning that cookie cutter hotels and basic rooms are no longer good enough. Travelers crave more. So, we took the liberty of finding our favorite short-term rentals out there so you don’t have to.</p>
+</section>
 
-It’s all about the accommodation. Now, more than ever, we rely on visuals before we make travel plans, meaning that cookie cutter hotels and basic rooms are no longer good enough. Travelers crave more. So, we took the liberty of finding our favorite short-term rentals out there so you don’t have to.
-
-Oheka Castle
-Long Island, NY
+<section>
+  <img src="/images/oheka.jpg">
+  <h5><a href="https://www.airbnb.com.au/rooms/8548299">Oheka Castle</h5>
+  <h6>Long Island, NY</h6>
 For all of you who want to have your own “Blank Space” moment, you can rent out Oheka Castle for a mere $348/night. Whether you want to throw burning clothes off the balcony or walk greyhounds in the courtyard, this castle is where T-Swift filmed the iconic music video herself.
 Walla Walla Wine Barrel
 Walla Walla, WA
