updated blog posts

--- a/_posts/2017-01-10-Amazing-Vacation-Homes.html
+++ b/_posts/2017-01-10-Amazing-Vacation-Homes.html
@@ -3,10 +3,10 @@ layout: post
 title: Amazing Vacation Homes You Can Actually Stay In
 meta-description:
 meta-keywords:
-categories: [travel, wine]
+categories: [travel]
 author: Samantha Ruiz
 ---
-<p>It’s all about the accommodation. Now, more than ever, we rely on visuals before we make travel plans, meaning that cookie cutter hotels and basic rooms are no longer good enough. Travelers crave more. So, we took the liberty of finding our favorite short-term rentals out there so you don’t have to.</p>
+<p>It’s all about the accommodation. Now, more than ever, we rely on visuals before we make travel plans, meaning that cookie cutter hotels and basic rooms are no longer good enough. Travelers crave more. So, we took the liberty of finding our favorite short-term rentals out there so you don’t have to. If you think there are any we missed, let us know in the comments! Happy Vacationing.</p>
 
 <a href="https://www.airbnb.com.au/rooms/8548299"><img src="/images/oheka.jpg"></a>
 <h5><a href="https://www.airbnb.com.au/rooms/8548299">Oheka Castle</a></h5>
