--- a/career.html
+++ b/career.html
@@ -13,7 +13,7 @@ featured-image_path: /images/wt_blackcompass.png
     </div>
   </div>
 </section>
-<section class="light">
+<section class="light animation-trigger">
   <h2>Who are we?</h2>
   <p>At Well Traveled, we believe that travel should be smarter. We believe that brands shouldn’t look at demographics, but at personalities. We believe that people are more than just numbers. We believe that travel is personal. We believe that data has the power to transform travel, inform brands and create life-changing experiences. At Well Traveled, we’re not just believing, we’re doing. Join us and make travel smarter.</p>
   <h5>Current openings</h5>
