--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ featured-image_path: /images/wt_blackcompass.png
 
 
 <!-- FIRST BANNER SECTION ---->
-<section class="intro banner left no-padding">
-  {% include site-header.html %}
+{% include site-header.html %}
+<section class="intro banner left cta-text">
   <div class="col">
     <h1> Making travel smarter. </h1>
     <a href="#signup-modal" rel="modal:open"><button>Sign up for free</button></a>
@@ -16,7 +16,7 @@ featured-image_path: /images/wt_blackcompass.png
 </section>
 
 <!-- SECOND CTA SECTION ---->
-<section class="centered">
+<section class="centered animation-trigger">
   <h2>We believe in the power of data.</h2>
   <p>We're equipping travel brands, influencers and booking sites with access to powerful data through the use of a free, insightful dashboard.</p>
   <div>
