--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@ featured-image_path: /images/wt_blackcompass.png
     </div>
   </div>
 </section>
-<section class="centered staff">
+<section class="centered staff animation-trigger">
   <h2>Meet the Team.</h2>
 </section>
 <section class="grid no-padding">
