--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ featured-image_path: /images/wt_blackcompass.png
     </div>
   </div>
   </section>
-  <section class="col centered">
+  <section class="col centered animation-trigger">
     <p>Great Companies Use Well Traveled</p>
     <H2><span class="count">1000</span></h2>
       <p>partnerships and counting</p>
